# Example-Models-For-Modeling-Bootcamp

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  Prototype_model.xlsm  README.md  RnD_Model_example.py  RnD_model.py  TODOS.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: calculations.md  governance-limitations.md  index.md  inputs-outputs.md  install-run.md  license.md  testing-signoffs.md
docs/api/: loader.md  models.md  mortality.md  projection.md  runner.md  writer.md
docs/mockups/: desktop-ui-v1.html
inputs/: Input 10 pol 25 scen seed.xlsm  Input 10 pol 25 scen seed.xlsx  Input 10 pol 25 scen seeded.xlsm  Input 10 pol 25 scen table _ edited 1.xlsx  Input 10 pol 25 scen table _ edited.xlsx  Input 10 pol 25 scen table.xlsm  Input 10 pol 25 scen table.xlsx  Input 100k pol 10k scen seed.xlsm  Input 100k pol 10k scen seed.xlsx  Input 100k pol 10k scen.xlsm  Input 10k pol 25 scen seed.xlsx  Input 50k pol 10k scen seed.xlsm  Input 50k pol 10k scen seed.xlsx  Input 50k pol 25 scen seed.xlsx  Input 5k pol 10k scen seed.xlsx  Input 5k pol 25 scen seed.xlsx  Input v2 10 pol 25 scen seed Annuity.xlsx  Input v2 10 pol 25 scen seed Life.xlsx  Input v2 10 pol 25 scen table Annuity.xlsx  Input v2 10 pol 25 scen table Life.xlsx  Interface_Example_v4.xlsm
src/mbc_model/: __init__.py  __main__.py  runner.py
tests/data/: test_loader.py  test_loader_validation.py
tests/engine/: test_mortality.py  test_projection.py
tests/integration/: test_rnd_parity.py  test_runner.py
tests/reporting/: test_charts.py  test_writer.py
(+20 files in other folders)
